<resources>
    <string name="app_name">MatchFixing</string>
    <string name="usernameField">Gebruikersnaam</string>
    <string name="passwordField">000000</string>
    <string name="loginBtn">Inloggen</string>
    <string name="rememberCheckBox">Inloggegevens onthouden?</string>
    <string name="registerText">Heeft u nog geen inloggegevens? klik hier om te registeren.</string>
    <string name="profile">Profiel</string>
    <string name="matchmaker">Match maken</string>
    <string name="Groups">Groepen beheren</string>
    <string name="Invites">Mijn uitnodigingen</string>
    <string name="Calender">Kalender</string>
    <string name="Save">Opslaan</string>
    <string name="Cancel">Annuleren</string>
    <string name="EditGroup">Aanpassen</string>
    <string name="CreateGroupText">Voer een nieuwe groepsnaam in</string>
    <string name="AddPerson">Toevoegen</string>
    <string name="RemovePerson">Verwijderen</string>
    <string name="NewGroup">Nieuw</string>
    <string name="EditGroupText">Groepen aanmaken en beheren</string>



</resources>
