<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorGray"
    tools:context="com.matchfixing.minor.matchfixing.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:text="@string/usernameField"
        android:ems="10"
        style="@style/AppTheme"
        android:id="@+id/userNameField"
        android:layout_marginTop="108dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        style="@style/AppTheme"
        android:id="@+id/passwordField"
        android:layout_below="@+id/userNameField"
        android:layout_alignLeft="@+id/userNameField"
        android:layout_alignStart="@+id/userNameField"
        android:text="@string/passwordField" />

    <CheckBox
        android:id="@+id/saveLoginCheckBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/passwordField"
        android:layout_toRightOf="@+id/loginBtn"
        android:text="@string/rememberCheckBox"
        style="@style/AppTheme"
        android:textColor="#FFF" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginBtn"
        android:id="@+id/loginBtn"
        style="@style/AppTheme"
        android:layout_below="@+id/passwordField"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        style="@style/AppTheme"
        android:layout_centerHorizontal="true"
        android:text="@string/registerText"/>
</RelativeLayout>








