<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282828"
    android:padding="20dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="#5d5d5d"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/btnProfile"
        android:text="@string/profile"
        android:onClick="profile_profile"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="#5d5d5d"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/btnMatchMaker"
        android:text="@string/matchmaker"
        android:onClick="matchmaker_matchmaker"
        android:layout_below="@+id/btnProfile"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="#5d5d5d"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/btnGroups"
        android:text="@string/Groups"
        android:onClick="group_group"
        android:layout_below="@+id/btnMatchMaker"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="#5d5d5d"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/btnInvites"
        android:text="@string/Invites"
        android:onClick="invites_invites"
        android:layout_below="@+id/btnGroups"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:background="#5d5d5d"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/btnCalender"
        android:text="@string/Calender"
        android:onClick="calender_calender"
        android:layout_below="@+id/btnInvites"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>