<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#282828"
    android:padding="20dp">
    <Button
        android:layout_height="40dp"
        android:layout_width="40dp"
        android:background="@drawable/home"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="home_home"
        android:id="@+id/btnHome" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/GroupCreation"
        android:layout_marginTop="40dp"
        android:text="@string/EditGroupText"
        android:typeface="sans"
        android:textSize="24sp"
        android:textColor="#00aa55"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:textStyle="bold"
        android:background="#5d5d5d"
        android:padding="10dp"
        android:textSize="20sp"
        android:layout_below="@+id/GroupCreation"
        android:hint="Groepsnaam"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/GroupNameText" />

    <Button
        android:text="@string/AddPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SearchPersonDropdown"
        android:onClick="addPerson_addPerson"
        android:layout_alignParentRight="true"
        android:id="@+id/btnAddPerson" />

    <Button
        android:text="@string/RemovePerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/PersonListGrid"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:onClick="removePerson_removePerson"
        android:id="@+id/btnRemovePerson" />

    <Button
        android:text="@string/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:onClick="cancelGroup_cancelGroup"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnCancelGroup" />

    <Spinner
        android:id="@+id/SearchPersonDropdown"
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:touchscreenBlocksFocus="false"
        android:dropDownSelector="#b0ff0101"
        android:dropDownWidth="150dp"
        android:background="#19ffffff"
        android:popupBackground="#000000"
        android:textAlignment="center"
        android:layout_marginLeft="220dp"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/PersonListGrid"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <GridView
        android:layout_width="180dp"
        android:layout_height="150dp"
        android:id="@+id/PersonListGrid"
        android:background="#19ffffff"
        android:textColor="@color/colorWhite"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btnRemovePerson"
        android:layout_alignStart="@+id/btnRemovePerson"/>

    <Button
        android:text="@string/Save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveGroup_saveGroup"
        android:id="@+id/btnSaveGroup"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>